V6.0.1
* fixed SQL bug (https://github.com/Rocologo/MobHunting/issues/412)
V6.0.0 Minecraft 1.13 release
* This version is only for MC 1.13
* Dolphin, Drowned, Phantom, Turtle and Fish (as a Mob) added with rewards and Mob heads to be dropped
* BagOfGold uses MUST upgrade to V2.0.0 (https://fractal.lindegaard.one:8181/job/BagOfGold/)
V5.7.3
*
V5.7.2
* Minor change
V5.7.1
* Fixed Ticket 409 (https://github.com/Rocologo/MobHunting/issues/409)
* Changed how data was stored in the database (Same order as they were inserted).
V5.7.0
* Fixed bStarts.org redirecting 
* BagOfGold balance fixed when changing gamemode - PerWorldInventory is mandatory if you change worlds/gamemode
V5.6.9
* Fixed bStarts.org reporting
V5.6.7
* Fixed ticket 408 (https://github.com/Rocologo/MobHunting/issues/408) 
V5.6.6
* Fix bug where all normal Minecraft mobs was detected as a Elitemob.
V5.6.5
* Added Support for EliteMobs
* Removed MCstats.org Metrics completely
* BagOfGold can now be used in both Survival and Creative mode. PerWorldInventory or similar plugin is strongly recommended. 
V5.6.4
* Added test for Worldguard 6.2+ (MobHunting only support WG 6.2 and newer)
* Fixed MobArena bug
* Fixed ticket 408 (https://github.com/Rocologo/MobHunting/issues/408)
V5.6.3
* Added support for CMIHolograms
* Fixed when when MythicMobs has been deleted from MythicMob config files. (https://github.com/Rocologo/MobHunting/issues/394)
* MobHunting Flag is fixed again. Now using Worldguards new Custom Flag Registry.  
V5.6.2
* Fixed ticket 391 (https://github.com/Rocologo/MobHunting/issues/391)
* Removed runTaskLaterAsynchronously from MasterMobHunter
* Add missing commands in /mh database (https://github.com/Rocologo/MobHunting/issues/391) 
* Fixed Ticket 389 - ConcurrentModificationException (https://github.com/Rocologo/MobHunting/issues/389)
* MyPet can now pickup BagOfGold
V5.6.1
* Fixed BagOfGold duplication reported and tested by Instantout. Thanks! 